Bump standalone runtime beta to 0.1.2